<resources>
    <string name="app_name">Cocktails2023</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bear">Bear</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="glasses">Glasses</string>
    <string name="ingredients">Ingredients</string>
    <string name="categories">Categories</string>
    <string name="select_subcategories">Select subcategories</string>
    <string name="back_cocktails">Back to cocktails</string>
    <string name="select_category">Select category</string>
    <string name="back_categories">Back to categories</string>
    <string name="instructions">Instructions</string>
    <string name="title_cocktail">Title cocktail</string>
    <string name="favorites">Favorites</string>
    <string name="cocktail_image">Cocktail image</string>
    <string name="cocktail_like">Check if like it</string>
    <string name="choose_like">"Choose other category. Select cocktail. Push heart."</string>
    <string name="no_subcategories">No subcategories</string>
    <string name="no_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
</resources>