<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".presentation.details_cocktail.DetailsCocktailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <FrameLayout
            android:id="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:contentDescription="@string/cocktail_image"
                android:scaleType="centerInside" />

            <ImageView
                android:id="@+id/imageViewFavorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/cocktail_like"
                android:src="@drawable/ic_favorite_grey" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_cocktail_title"
            app:layout_constraintTop_toBottomOf="@id/frameLayout"
            app:layout_constraintBottom_toTopOf="@id/tv_cocktail_intsructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="@string/title_cocktail" />

        <TextView
            android:id="@+id/tv_cocktail_intsructions"
            app:layout_constraintTop_toBottomOf="@id/tv_cocktail_title"
            app:layout_constraintBottom_toTopOf="@id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:text="@string/instructions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_cocktail_intsructions"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>